Polishing for exam

--- a/demo_practical9.ipynb
+++ b/demo_practical9.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "c = 1/N * Xp.T.dot(Xp)\n",
     "\n",
-    "#compute and sort (from largest to smallest) the eigenvalues v,w\n",
+    "#compute and sort (from largest to smallest) the eigenvectors and -values v,w\n",
     "\n",
     "w, v = np.linalg.eig(c)\n",
     "idx_sort = np.argsort(w)[::-1]\n",
@@ -192,26 +192,6 @@
     "nlon , nlat = len(X_lonlat.longitude) ,len(X_lonlat.latitude)\n",
     "v_xr = xr.DataArray(v.real.reshape(nlon , nlat , nlon * nlat),dims=[\"lon\",\"lat\",\"EOF\",],coords=dict(EOF=range(1, nlon * nlat + 1), lon=X_lonlat.longitude.values , lat=X_lonlat.latitude.values),)\n",
     "utils.plot_dataarray_map(v_xr.sel(EOF=1).real.T, levels =20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nlon"
    ]
   },
   {
